--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Calculator App</title>
 </head>
     <body>
-        <main>
+        <div class="calculator">
             <div class="calculator-wrapper">
-            <h1>Calculator</h1>
-            <div class="calculator-container">
-                <div type="text" class="calculator-screen" title="text-input" disabled>
+                <h1>Calculator</h1>
+                <div class="calculator-container">
+                    <div type="text" class="calculator-screen" title="text-input" disabled>
                     <p class="screen-display">0</p>
                 </div>
             
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-    </main>
+    </div>
 
     <script src="./main.js"></script>
 </body>
