Made the new feautures functional and update the design

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <h1>Calculator</h1>
                 <div class="calculator-container">
                     <div type="text" class="calculator-screen">
-                        <span class="calculator-screen__prev">0</span>
-                        <span class="calculator-screen__curr">0</span>
+                        <div class="calculator-screen__prev"></div>
+                        <div class="calculator-screen__curr">0</div>
                     </div>
             
                     <div class="calculator-keys">
-                        <button class="operator bakspace-key" value="delete" data-action="delete">&larr;</button>
+                        <button class="operator bakspace-key" value="delete" data-action="delete">&larr;</button> <!-- back arrow UTF-8 code-->
                         <button class="number two" value="2">2</button>
                         <button class="number three" value="3">3</button>
                         <button class="operator addition-key" value="+" data-action="add">+</button>
@@ -36,16 +36,16 @@
                         <button class="number six" value="6">6</button>
                         <button class="number seven" value="7">7</button>
                         <button class="number eight" value="8">8</button>
-                        <button class="operator multiplication" value="*" data-action="multiply">&times;</button>
+                        <button class="operator multiplication" value="*" data-action="multiply">&times;</button> <!-- multiply UTF-8 code-->
 
                         <button class="number nine" value="9">9</button>
                         <button class="operator clear-key" value="clear" data-action="clear">AC</button>
-                        <button class="decimal decimal-key" value="." data-action="decimal">&bull;</button> <!-- used UTF-8 code -->
+                        <button class="decimal decimal-key" value="." data-action="decimal">&bull;</button> <!-- Bullet UTF-8 code for decimal-->
                         <button class="operator division-key" value="/" data-action="divide">/</button>
 
-                        <button button class="operator percentage-key" value="percentage" data-action="percent">&#37;</button>
-                        <button class="number zero" value="0">0</button>
+                        <button button class="operator percentage-key" value="percentage" data-action="percent">&#37;</button> <!-- % UTF-8 code-->
                         <button class="operator equal-key" value="=" data-action="calculate">=</button>
+                        <button class="number zero" value="0">0</button>
 
                     </div>
                 </div>
